--- a/views/book.ejs
+++ b/views/book.ejs
@@ -106,7 +106,7 @@
                             </div>
                             <div class="text p-4">
                                 <p class="mb-2"><span class="price">$12.00</span></p>
-                                <h2><a href="#"><%= book.title %></a></h2>
+                                <h2><a href="/book_details/<%= book.slug %>"><%= book.title %></a></h2>
                                 <span class="position">De <%= book.author.name %></span>
                             </div>
                         </div>
