--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -11,21 +11,21 @@
         href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/../css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="../css/animate.css">
 
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../css/magnific-popup.css">
 
     <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.min.css">
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/../css/bootstrap-select.min.css">
 
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/flaticon.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/../css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
     <style>
@@ -281,37 +281,16 @@
             <div class="product-imgs">
                 <div class="img-display">
                     <div class="img-showcase">
-                        <img src="/shoes_images/shoe_1.jpg" alt="shoe image">
+                        <img src="<%= book.coverUrl %>" alt="<%= book.title %> cover">
                     </div>
                 </div>
-                <!-- <div class="img-select">
-                    <div class="img-item">
-                        <a href="#" data-id="1">
-                            <img src="/shoes_images/shoe_1.jpg" alt="shoe image">
-                        </a>
-                    </div>
-                    <div class="img-item">
-                        <a href="#" data-id="2">
-                            <img src="/shoes_images/shoe_2.jpg" alt="shoe image">
-                        </a>
-                    </div>
-                    <div class="img-item">
-                        <a href="#" data-id="3">
-                            <img src="/shoes_images/shoe_3.jpg" alt="shoe image">
-                        </a>
-                    </div>
-                    <div class="img-item">
-                        <a href="#" data-id="4">
-                            <img src="/shoes_images/shoe_4.jpg" alt="shoe image">
-                        </a>
-                    </div>
-                </div> -->
             </div>
             <!-- card right -->
             <div class="product-content">
-                <h2 class="product-title">nike shoes</h2>
-                <a href="#" class="product-link">visit nike store</a>
+                <h2 class="product-title"><%= book.title %></h2>
+                <a href="#" class="product-link">Voir plus de détails</a>
                 <div class="product-rating">
+                    <!-- Vous pouvez ajouter un système de notation si vous en avez un -->
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -319,19 +298,25 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>4.7(21)</span>
                 </div>
-
+    
                 <div class="product-detail">
-                    <h2>about this item: </h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eveniet veniam tempora fuga tenetur
-                        placeat sapiente architecto illum soluta consequuntur, aspernatur quidem at sequi ipsa!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, perferendis eius.
-                        Dignissimos, labore suscipit. Unde.</p>
+                    <h2>À propos de ce livre : </h2>
+                    <p><%= book.summary %></p>
                     <ul>
-                        <li>Color: <span>Black</span></li>
-                        <li>Available: <span>in stock</span></li>
-                        <li>Category: <span>Shoes</span></li>
-                        <li>Shipping Area: <span>All over the world</span></li>
-                        <li>Shipping Fee: <span>Free</span></li>
+                        <li>Auteur : <span><%= book.author.name %></span></li>
+                        <li>Statut : <span><%= book.status ? 'Disponible' : 'Non disponible' %></span></li>
+                        <li>Genres : 
+                            <span>
+                                <% book.genres.forEach((genre, index) => { %>
+                                    <%= genre.name %><%= index < book.genres.length - 1 ? ', ' : '' %>
+                                <% }); %>
+                            </span>
+                        </li>
+                        <li>Code : <span><%= book.code %></span></li>
+                        <li>Date de création : <span><%= new Date(book.createdAt).toLocaleDateString() %></span></li>
+                        <% if (book.publishedDate) { %>
+                            <li>Date de publication : <span><%= new Date(book.publishedDate).toLocaleDateString() %></span></li>
+                        <% } %>
                     </ul>
                 </div>
             </div>
@@ -442,22 +427,22 @@
 
         window.addEventListener('resize', slideImage);
     </script>
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery-migrate-3.0.1.min.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.easing.1.3.js"></script>
-        <script src="js/jquery.waypoints.min.js"></script>
-        <script src="js/jquery.stellar.min.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/jquery.magnific-popup.min.js"></script>
-        <script src="js/jquery.animateNumber.min.js"></script>
-        <script src="js/scrollax.min.js"></script>
+        <script src="../js/jquery.min.js"></script>
+        <script src="../js/jquery-migrate-3.0.1.min.js"></script>
+        <script src="../js/popper.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
+        <script src="../js/jquery.easing.1.3.js"></script>
+        <script src="../js/jquery.waypoints.min.js"></script>
+        <script src="../js/jquery.stellar.min.js"></script>
+        <script src="../js/owl.carousel.min.js"></script>
+        <script src="../js/jquery.magnific-popup.min.js"></script>
+        <script src="../js/jquery.animateNumber.min.js"></script>
+        <script src="../js/scrollax.min.js"></script>
         <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-        <script src="js/google-map.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="../js/google-map.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/../js/bootstrap-select.min.js"></script>
+        <script src="../js/main.js"></script>
 </body>
 
 </html>
