--- a/views/author.ejs
+++ b/views/author.ejs
@@ -70,7 +70,7 @@
                                 <h3><%= author.name %></h3>
                                 <div class="faded">
                                     <p><%= author.biography.length > 40 ? author.biography.substring(0, 60) + '...' : author.biography %></p>
-                                    <a href="/author_details/<%= author.slug %>" class="btn btn-primary">Voir tous les livres</a>
+                                    <a href="/author_details/<%= author.slug %>" class="btn btn-primary">En savoir plus</a>
                                     <ul class="ftco-social text-center">
                                         <li class="ftco-animate"><a href="#"
                                                 class="d-flex align-items-center justify-content-center"><span
