--- a/views/author_details.ejs
+++ b/views/author_details.ejs
@@ -274,6 +274,17 @@
 </head>
 
 <body>
+    <%- include('./components/head') %>
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+        <div class="container-fluid">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+                aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="fa fa-bars"></span> Menu
+            </button>
+            <!-- Dans votre fichier de layout ou de page principale -->
+            <%- include('./components/nav', { currentPage: 3 }) %>
+    </nav>
 
     <div class="card-wrapper">
         <div class="card">
