--- a/views/components/nav.ejs
+++ b/views/components/nav.ejs
@@ -6,7 +6,9 @@
             { name: 'Home', link: '/' },
             { name: 'Meilleur ventes', link: '/top-seller' },
             { name: 'Livres', link: '/book' },
-            { name: 'Auteur', link: '/author' }
+            { name: 'Auteur', link: '/author' },
+            { name: 'Genre', link: '/genre' }
+
         ];
         navItems.forEach((item, index) => { 
         %>
