--- a/views/genre.ejs
+++ b/views/genre.ejs
@@ -37,7 +37,7 @@
                 <span class="fa fa-bars"></span> Menu
             </button>
             <!-- Dans votre fichier de layout ou de page principale -->
-            <%- include('./components/nav', { currentPage: 3 }) %>
+            <%- include('./components/nav', { currentPage: 4 }) %>
     </nav>
     <!-- END nav -->
 
@@ -47,10 +47,10 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate mb-0 text-center">
-                    <p class="breadcrumbs mb-0"><span class="mr-2"><a href="index.html">Home <i
-                                    class="fa fa-chevron-right"></i></a></span> <span>Auteurs <i
+                    <p class="breadcrumbs mb-0"><span class="mr-2"><a href="index.html">Accueil <i
+                                    class="fa fa-chevron-right"></i></a></span> <span>Genre <i
                                 class="fa fa-chevron-right"></i></span></p>
-                    <h1 class="mb-0 bread">Auteurs</h1>
+                    <h1 class="mb-0 bread">Genres</h1>
                 </div>
             </div>
         </div>
@@ -59,18 +59,18 @@
     <section class="ftco-section">
         <div class="container">
             <div class="row">
-                <% authors.slice(0, 8).forEach(function(author) { %>
+                <% genres.forEach(function(genre) { %>
                     <div class="col-md-6 col-lg-3 ftco-animate">
                         <div class="staff">
                             <div class="img-wrap d-flex align-items-stretch">
-                                <div class="img align-self-stretch" style="background-image: url(<%= author.photoUrl %>);">
+                                <div class="img align-self-stretch" style="background-image: url(images/book-1.jpg);">
                                 </div>
                             </div>
                             <div class="text pt-3 px-3 pb-4 text-center">
-                                <h3><%= author.name %></h3>
+                                <h3><%= genre.name %></h3>
                                 <div class="faded">
-                                    <p><%= author.biography.length > 40 ? author.biography.substring(0, 60) + '...' : author.biography %></p>
-                                    <a href="/author_details/<%= author.slug %>" class="btn btn-primary">Voir tous les livres</a>
+                                    <p><%= genre.description.length > 60 ? genre.description.substring(0, 60) + '...' : genre.biography %></p>
+                                    <a href="# class="btn btn-primary">Voir tous les livres</a>
                                     <ul class="ftco-social text-center">
                                         <li class="ftco-animate"><a href="#"
                                                 class="d-flex align-items-center justify-content-center"><span
