--- a/views/author.ejs
+++ b/views/author.ejs
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row justify-content-center pb-5 mb-3">
                 <div class="col-md-7 heading-section text-center ftco-animate">
-                    <h2>Parcourir tout les Auteurs</h2>
+                    <h2>Parcourir tous les Auteurs</h2>
                 </div>
             </div>
             <div class="row">
