--- a/views/book.ejs
+++ b/views/book.ejs
@@ -107,7 +107,7 @@
                             <div class="text p-4">
                                 <p class="mb-2"><span class="price">$12.00</span></p>
                                 <h2><a href="/book_details/<%= book.slug %>"><%= book.title %></a></h2>
-                                <span class="position">De <%= book.author.name %></span>
+                                <span class="position"><a style="color: black;" href="/author_details/<%= book.author.slug %>">De <%= book.author.name %></a></span>
                             </div>
                         </div>
                     </div>
