--- a/views/genre.ejs
+++ b/views/genre.ejs
@@ -59,7 +59,7 @@
     <section class="ftco-section">
         <div class="container">
             <div class="row">
-                <% genres.forEach(function(genre) { %>
+                <% genres.slice(0, 4).forEach(function(genre) { %>
                     <div class="col-md-6 col-lg-3 ftco-animate">
                         <div class="staff">
                             <div class="img-wrap d-flex align-items-stretch">
@@ -90,6 +90,34 @@
                         </div>
                     </div>
                 <% }); %>
+            </div>
+        </div>
+    </section>
+
+    <section class="ftco-section ftco-no-pt">
+        <div class="container">
+            <div class="row justify-content-center pb-5 mb-3">
+                <div class="col-md-7 heading-section text-center ftco-animate">
+                    <h2>Parcourir tous les Genres</h2>
+                </div>
+            </div>
+            <div class="row">
+                <% 
+                const genresPerColumn = Math.ceil(genres.length / 6);
+                for(let i = 0; i < 6; i++) { 
+                %>
+                    <div class="col-md-2 ftco-animate">
+                        <ul class="top">
+                            <% 
+                            const startIndex = i * genresPerColumn;
+                            const endIndex = Math.min((i + 1) * genresPerColumn, genres.length);
+                            for(let j = startIndex; j < endIndex; j++) { 
+                            %>
+                                <li><a href="/genre_details/<%= genres[j].slug %>"><%= genres[j].name %></a></li>
+                            <% } %>
+                        </ul>
+                    </div>
+                <% } %>
             </div>
         </div>
     </section>
