add details genres

--- a/views/components/nav.ejs
+++ b/views/components/nav.ejs
@@ -6,8 +6,8 @@
             { name: 'Home', link: '/' },
             { name: 'Meilleur ventes', link: '/top-seller' },
             { name: 'Livres', link: '/book' },
-            { name: 'Auteur', link: '/author' },
-            { name: 'Genre', link: '/genre' }
+            { name: 'Auteurs', link: '/author' },
+            { name: 'Genres', link: '/genre' }
 
         ];
         navItems.forEach((item, index) => { 
