--- a/views/index.ejs
+++ b/views/index.ejs
@@ -723,35 +723,21 @@
                         <div class="row no-gutters mb-5">
                             <div class="col-md-7">
                                 <div class="contact-wrap w-100 p-md-5 p-4">
-                                    <h3 class="mb-4">Nous contacter</h3>
-                                    <form method="POST" id="contactForm" name="contactForm" class="contactForm">
+                                    <h3 class="mb-4">Newsletter</h3>
+                                    <form method="POST" action="/newsletter" id="contactForm" name="contactForm" class="contactForm">
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <div class="col-md-12">
                                                 <div class="form-group">
                                                     <label class="label" for="name">Nom complet</label>
                                                     <input type="text" class="form-control" name="name" id="name"
                                                         placeholder="Name">
                                                 </div>
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="col-md-12">
                                                 <div class="form-group">
                                                     <label class="label" for="email">Adresse électronique</label>
                                                     <input type="email" class="form-control" name="email" id="email"
                                                         placeholder="Email">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-12">
-                                                <div class="form-group">
-                                                    <label class="label" for="subject">Objet</label>
-                                                    <input type="text" class="form-control" name="subject" id="subject"
-                                                        placeholder="Subject">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-12">
-                                                <div class="form-group">
-                                                    <label class="label" for="#">Message</label>
-                                                    <textarea name="message" class="form-control" id="message" cols="30"
-                                                        rows="4" placeholder="Message"></textarea>
                                                 </div>
                                             </div>
                                             <div class="col-md-12">
