--- a/views/components/head.ejs
+++ b/views/components/head.ejs
@@ -1,26 +1,277 @@
-<div class="container-fluid px-md-5  pt-4 pt-md-5">
-    <div class="row justify-content-between">
-        <div class="col-md-8 order-md-last">
-            <div class="row">
-                <div class="col-md-6 text-center">
-                    <a class="navbar-brand" href="index.html">Les Editions <span>Calebasse</span> <small></small></a>
-                </div>
-                <div class="col-md-6 d-md-flex justify-content-end mb-md-0 mb-3">
+<head>
+    <title>
+        Les Éditions Calebasse
+    </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 d-flex">
-            <div class="social-media">
-                <p class="mb-0 d-flex">
-                    <a href="https://www.facebook.com/p/Les-%C3%89ditions-Calebasse-61554878352440/" class="d-flex align-items-center justify-content-center"><span
-                            class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-                    <a href="#" class="d-flex align-items-center justify-content-center"><span
-                            class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-                    <a href="https://www.instagram.com/les_editions_calebasse/p/C69in3wMoCF/" class="d-flex align-items-center justify-content-center"><span
-                            class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+
+    <link rel="stylesheet" href="/css/animate.css">
+
+    <link rel="stylesheet" href="/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/css/magnific-popup.css">
+
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1//css/bootstrap-select.min.css">
+
+    <link rel="stylesheet" href="/css/flaticon.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/../css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
+    <!-- Pour une favicon .png -->
+    <link rel="icon" type="image/png" href="/images/icon.png">
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
+
+        * {
+            box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+            font-family: 'Open Sans', sans-serif;
+        }
+
+        body {
+            line-height: 1.5;
+        }
+
+        .card-wrapper {
+            max-width: 1100px;
+            margin: 0 auto;
+        }
+
+        img {
+            width: 100%;
+            display: block;
+        }
+
+        .img-display {
+            overflow: hidden;
+        }
+
+        .img-showcase {
+            display: flex;
+            width: 100%;
+            transition: all 0.5s ease;
+        }
+
+        .img-showcase img {
+            min-width: 100%;
+        }
+
+        .img-select {
+            display: flex;
+        }
+
+        .img-item {
+            margin: 0.3rem;
+        }
+
+        .img-item:nth-child(1),
+        .img-item:nth-child(2),
+        .img-item:nth-child(3) {
+            margin-right: 0;
+        }
+
+        .img-item:hover {
+            opacity: 0.8;
+        }
+
+        .product-content {
+            padding: 2rem 1rem;
+        }
+
+        .product-title {
+            font-size: 3rem;
+            text-transform: capitalize;
+            font-weight: 700;
+            position: relative;
+            color: #12263a;
+            margin: 1rem 0;
+        }
+
+        .product-title::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            height: 4px;
+            width: 80px;
+            background: #12263a;
+        }
+
+        .product-link {
+            text-decoration: none;
+            text-transform: uppercase;
+            font-weight: 400;
+            font-size: 0.9rem;
+            display: inline-block;
+            margin-bottom: 0.5rem;
+            background: #256eff;
+            color: #fff;
+            padding: 0 0.3rem;
+            transition: all 0.5s ease;
+        }
+
+        .product-link:hover {
+            opacity: 0.9;
+        }
+
+        .product-rating {
+            color: #ffc107;
+        }
+
+        .product-rating span {
+            font-weight: 600;
+            color: #252525;
+        }
+
+        .product-price {
+            margin: 1rem 0;
+            font-size: 1rem;
+            font-weight: 700;
+        }
+
+        .product-price span {
+            font-weight: 400;
+        }
+
+        .last-price span {
+            color: #f64749;
+            text-decoration: line-through;
+        }
+
+        .new-price span {
+            color: #256eff;
+        }
+
+        .product-detail h2 {
+            text-transform: capitalize;
+            color: #12263a;
+            padding-bottom: 0.6rem;
+        }
+
+        .product-detail p {
+            font-size: 0.9rem;
+            padding: 0.3rem;
+            opacity: 0.8;
+        }
+
+        .product-detail ul {
+            margin: 1rem 0;
+            font-size: 0.9rem;
+        }
+
+        .product-detail ul li {
+            margin: 0;
+            list-style: none;
+            background: url(/shoes_images/checked.png) left center no-repeat;
+            background-size: 18px;
+            padding-left: 1.7rem;
+            margin: 0.4rem 0;
+            font-weight: 600;
+            opacity: 0.9;
+        }
+
+        .product-detail ul li span {
+            font-weight: 400;
+        }
+
+        .purchase-info {
+            margin: 1.5rem 0;
+        }
+
+        .purchase-info input,
+        .purchase-info .btn {
+            border: 1.5px solid #ddd;
+            border-radius: 25px;
+            text-align: center;
+            padding: 0.45rem 0.8rem;
+            outline: 0;
+            margin-right: 0.2rem;
+            margin-bottom: 1rem;
+        }
+
+        .purchase-info input {
+            width: 60px;
+        }
+
+        .purchase-info .btn {
+            cursor: pointer;
+            color: #fff;
+        }
+
+        .purchase-info .btn:first-of-type {
+            background: #256eff;
+        }
+
+        .purchase-info .btn:last-of-type {
+            background: #f64749;
+        }
+
+        .purchase-info .btn:hover {
+            opacity: 0.9;
+        }
+
+        .social-links {
+            display: flex;
+            align-items: center;
+        }
+
+        .social-links a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 32px;
+            height: 32px;
+            color: #000;
+            border: 1px solid #000;
+            margin: 0 0.2rem;
+            border-radius: 50%;
+            text-decoration: none;
+            font-size: 0.8rem;
+            transition: all 0.5s ease;
+        }
+
+        .social-links a:hover {
+            background: #000;
+            border-color: transparent;
+            color: #fff;
+        }
+
+        @media screen and (min-width: 992px) {
+            .card {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-gap: 1.5rem;
+            }
+
+            .card-wrapper {
+                height: 100vh;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .product-imgs {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            .product-content {
+                padding-top: 0;
+            }
+        }
+    </style>
+</head>
