--- a/views/components/release.ejs
+++ b/views/components/release.ejs
@@ -3,185 +3,40 @@
         <div class="row justify-content-center pb-5 mb-3">
             <div class="col-md-7 heading-section text-center ftco-animate">
                 <span class="subheading">Livres</span>
-                <h2>Nouvelle sortie</h2>
+                <h2>Nouvelles sorties</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 col-lg-4 d-flex">
-                <div class="book-wrap d-lg-flex">
-                    <div class="img d-flex justify-content-end" style="background-image: url(images/book-1.jpg);">
-                        <div class="in-text">
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to cart">
-                                <span class="flaticon-shopping-cart"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to Wishlist">
-                                <span class="flaticon-heart-1"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Quick View">
-                                <span class="flaticon-search"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Compare">
-                                <span class="flaticon-visibility"></span>
-                            </a>
+            <% for (b of books.slice(0,6)) { %>
+                <div class="col-md-6 col-lg-4 d-flex">
+                    <div class="book-wrap d-lg-flex">
+                        <% if (b.coverUrl) { %>
+                            <div class="img d-flex justify-content-end" style="background-image: url(<%= b.coverUrl %>);">
+                        <% } else { %>
+                            <div class="img d-flex justify-content-end" style="background-image: url(images/book-4.jpg);">
+                        <% } %>
+                        </div>
+                        <div class="text p-4 <% if (books.indexOf(b) > 2) { %>order-md-first<% } %>">
+                            <h2>
+                                <a href="/book/view/<%= b.slug %>">
+                                    <%= b.title %>
+                                </a>
+                            </h2>
+                            <span class="position">
+                                <%= b.author.name %>
+                            </span>
+                            <p class="mb-2">
+                                <% for (g of b.genres) { %>
+                                    <span class="price">
+                                        <%= g.name %>
+                                        <% if (b.genres.indexOf(g) !== b.genres.length -1) { %>,<% } %>
+                                    </span>
+                                <% } %>
+                            </p>
                         </div>
                     </div>
-                    <div class="text p-4">
-                        <p class="mb-2"><span class="price">$12.00</span></p>
-                        <h2><a href="#">You Are Your Only Limit</a></h2>
-                        <span class="position">De John Nathan Muller</span>
-                    </div>
                 </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex">
-                <div class="book-wrap d-lg-flex">
-                    <div class="img d-flex justify-content-end" style="background-image: url(images/book-2.jpg);">
-                        <div class="in-text">
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to cart">
-                                <span class="flaticon-shopping-cart"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to Wishlist">
-                                <span class="flaticon-heart-1"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Quick View">
-                                <span class="flaticon-search"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Compare">
-                                <span class="flaticon-visibility"></span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="text p-4">
-                        <p class="mb-2"><span class="price sale">$12.00</span> <span class="price">$8.00</span></p>
-                        <h2><a href="#">101 Essays That Will Change The Way Your Thinks</a></h2>
-                        <span class="position">De John Nathan Muller</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex">
-                <div class="book-wrap d-lg-flex">
-                    <div class="img d-flex justify-content-end" style="background-image: url(images/book-3.jpg);">
-                        <div class="in-text">
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to cart">
-                                <span class="flaticon-shopping-cart"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to Wishlist">
-                                <span class="flaticon-heart-1"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Quick View">
-                                <span class="flaticon-search"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Compare">
-                                <span class="flaticon-visibility"></span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="text p-4">
-                        <p class="mb-2"><span class="price">$12.00</span></p>
-                        <h2><a href="#">Your Soul Is A River</a></h2>
-                        <span class="position">De John Nathan Muller</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-4 d-flex">
-                <div class="book-wrap d-lg-flex">
-                    <div class="img d-flex justify-content-end" style="background-image: url(images/book-4.jpg);">
-                        <div class="in-text">
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to cart">
-                                <span class="flaticon-shopping-cart"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to Wishlist">
-                                <span class="flaticon-heart-1"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Quick View">
-                                <span class="flaticon-search"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Compare">
-                                <span class="flaticon-visibility"></span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="text p-4 order-md-first">
-                        <p class="mb-2"><span class="price">$9.00</span></p>
-                        <h2><a href="#">All The Letters I Should Have Sent</a></h2>
-                        <span class="position">De John Nathan Muller</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex">
-                <div class="book-wrap d-lg-flex">
-                    <div class="img d-flex justify-content-end" style="background-image: url(images/book-5.jpg);">
-                        <div class="in-text">
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to cart">
-                                <span class="flaticon-shopping-cart"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to Wishlist">
-                                <span class="flaticon-heart-1"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Quick View">
-                                <span class="flaticon-search"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Compare">
-                                <span class="flaticon-visibility"></span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="text p-4 order-md-first">
-                        <p class="mb-2"><span class="price">$20.00</span></p>
-                        <h2><a href="#">Happy</a></h2>
-                        <span class="position">De John Nathan Muller</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex">
-                <div class="book-wrap d-lg-flex">
-                    <div class="img d-flex justify-content-end" style="background-image: url(images/book-6.jpg);">
-                        <div class="in-text">
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to cart">
-                                <span class="flaticon-shopping-cart"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Add to Wishlist">
-                                <span class="flaticon-heart-1"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Quick View">
-                                <span class="flaticon-search"></span>
-                            </a>
-                            <a href="#" class="icon d-flex align-items-center justify-content-center"
-                                data-toggle="tooltip" data-placement="left" title="Compare">
-                                <span class="flaticon-visibility"></span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="text p-4 order-md-first">
-                        <p class="mb-2"><span class="price">$12.00</span></p>
-                        <h2><a href="#">Milk &amp; Honey</a></h2>
-                        <span class="position">De John Nathan Muller</span>
-                    </div>
-                </div>
-            </div>
+            <% } %>
         </div>
     </div>
 </section>
