--- a/views/top_reading/index.ejs
+++ b/views/top_reading/index.ejs
@@ -48,7 +48,7 @@
                                             </a>
                                         </h2>
                                         <span class="position">
-                                            De <%= b.author.name %>
+                                            <%= b.author.name %>
                                         </span>
                                     </div>
                                 </div>
