--- a/views/book/list.ejs
+++ b/views/book/list.ejs
@@ -36,7 +36,8 @@
                                 </h2>
                                 <span class="position">
                                     <a style="color: black;"
-                                        href="/author/view/<%= b.author.slug %>">De <%= b.author.name %>
+                                        href="/author/view/<%= b.author.slug %>">
+                                        <%= b.author.name %>
                                     </a>
                                 </span>
                             </div>
