fix bug on newsletter

--- a/views/components/release.ejs
+++ b/views/components/release.ejs
@@ -27,7 +27,7 @@
                             </span>
                             <p class="mb-2">
                                 <% for (g of b.genres) { %>
-                                    <span class="price">
+                                    <span class="price" style="color: #c12924;">
                                         <%= g.name %>
                                         <% if (b.genres.indexOf(g) !== b.genres.length -1) { %>,<% } %>
                                     </span>
