--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="ftco-footer">
+<footer class="ftco-footer" style="background-color: #b27c4e;">
     <div class="container">
         <div class="row mb-5">
             <div class="col-sm-12 col-md">
