--- a/views/components/testimony.ejs
+++ b/views/components/testimony.ejs
@@ -1,5 +1,5 @@
-<section class="ftco-section testimony-section ftco-no-pb">
-    <div class="img img-bg border" style="background-image: url(images/bg_4.jpg);"></div>
+<section class="ftco-section testimony-section ftco-no-pb" style="background-color: #f3e4dc;">
+    <div class="img img-bg border" style="background-image: url(images/bg_6.jpg);"></div>
     <div class="overlay"></div>
     <div class="container">
         <div class="row justify-content-center mb-5">
