--- a/public/css/style copy.css
+++ b/public/css/style copy.css
@@ -8011,10 +8011,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #2770ab; }
+  color: #96C9F4; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #2770ab;
+    color: #96C9F4;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -8059,14 +8059,14 @@ h1, h2, h3, h4, h5,
       display: block;
       width: 0;
       height: 2px;
-      background: #2770ab;
+      background: #96C9F4;
       -moz-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
       -webkit-transition: all 0.3s ease;
       -ms-transition: all 0.3s ease;
       transition: all 0.3s ease; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-      color: #2770ab; }
+      color: #96C9F4; }
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover:before {
         width: 100%; }
     @media (max-width: 991.98px) {
@@ -8092,7 +8092,7 @@ h1, h2, h3, h4, h5,
       font-size: 12px;
       color: #000000; }
       .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:hover, .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:focus {
-        background: #2770ab;
+        background: #96C9F4;
         color: #fff; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
@@ -8102,7 +8102,7 @@ h1, h2, h3, h4, h5,
           color: rgba(255, 255, 255, 0.8); } }
   .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
     color: #fff;
-    background: #2770ab;
+    background: #96C9F4;
     border-radius: 0px; }
     @media (max-width: 767.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
@@ -8111,10 +8111,10 @@ h1, h2, h3, h4, h5,
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
         color: #fff;
-        background: #2770ab;
+        background: #96C9F4;
         border-radius: 4px; } }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #2770ab; }
+    color: #96C9F4; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.active > a {
         color: #fff; } }
@@ -8165,8 +8165,8 @@ h1, h2, h3, h4, h5,
     .social-media p a span {
       color: #4d4d4d; }
     .social-media p a:hover {
-      background: #2770ab;
-      border-color: #2770ab; }
+      background: #96C9F4;
+      border-color: #96C9F4; }
       .social-media p a:hover span {
         color: #fff; }
 
@@ -8203,7 +8203,7 @@ h1, h2, h3, h4, h5,
   .searchform .search {
     width: 50px;
     height: 50px;
-    background: #2770ab !important; }
+    background: #96C9F4 !important; }
     .searchform .search span {
       font-size: 16px;
       color: #fff; }
@@ -8271,7 +8271,7 @@ h1, h2, h3, h4, h5,
         bottom: 80px;
         left: 0; } }
     .slider-text .img-video span {
-      color: #2770ab;
+      color: #96C9F4;
       font-size: 24px; }
   .slider-text p {
     font-size: 18px;
@@ -8291,9 +8291,9 @@ h1, h2, h3, h4, h5,
       .slider-text .breadcrumbs span a {
         color: rgba(0, 0, 0, 0.7); }
         .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-          color: #2770ab; }
+          color: #96C9F4; }
           .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-            color: #2770ab; }
+            color: #96C9F4; }
   .slider-text .bread {
     font-weight: 500 !important;
     position: relative; }
@@ -8315,7 +8315,7 @@ h1, h2, h3, h4, h5,
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       margin-top: -10px;
-      color: #2770ab !important;
+      color: #96C9F4 !important;
       -moz-transition: all 0.7s ease;
       -o-transition: all 0.7s ease;
       -webkit-transition: all 0.7s ease;
@@ -8385,7 +8385,7 @@ h1, h2, h3, h4, h5,
   background: #f2e7da !important; }
 
 .bg-primary {
-  background: #2770ab; }
+  background: #96C9F4; }
 
 .btn {
   cursor: pointer;
@@ -8400,36 +8400,36 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #2770ab !important;
-    border: 1px solid #2770ab !important;
+    background: #96C9F4 !important;
+    border: 1px solid #96C9F4 !important;
     color: #fff !important; }
     .btn.btn-primary:hover {
-      border: 1px solid #2770ab;
+      border: 1px solid #96C9F4;
       background: transparent;
-      color: #2770ab; }
+      color: #96C9F4; }
     .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #2770ab;
+      border: 1px solid #96C9F4;
       background: transparent;
-      color: #2770ab; }
+      color: #96C9F4; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #2770ab;
+        background: #96C9F4;
         color: #fff; }
   .btn.btn-white {
     background: #fff !important;
     border: 1px solid #fff !important;
     color: #000000 !important; }
     .btn.btn-white:hover {
-      border: 1px solid #2770ab;
+      border: 1px solid #96C9F4;
       background: transparent;
-      color: #2770ab; }
+      color: #96C9F4; }
     .btn.btn-white.btn-outline-white {
       border: 1px solid white !important;
       background: transparent !important;
       color: #fff !important; }
       .btn.btn-white.btn-outline-white:hover {
-        border: 1px solid #2770ab !important;
-        background: #2770ab !important;
+        border: 1px solid #96C9F4 !important;
+        background: #96C9F4 !important;
         color: #fff !important; }
 
 .services-2 {
@@ -8492,7 +8492,7 @@ h1, h2, h3, h4, h5,
     .services-2 h2 a {
       color: #000000; }
   .services-2:hover .icon {
-    background: #2770ab;
+    background: #96C9F4;
     -webkit-box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.15); }
@@ -8519,7 +8519,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #2770ab !important; }
+  background: #96C9F4 !important; }
 
 .bg-black {
   background: #000000; }
@@ -8580,7 +8580,7 @@ textarea.form-control {
       color: #000000;
       margin-bottom: 5px; }
     .staff .text .position {
-      color: #2770ab;
+      color: #96C9F4;
       display: block;
       font-weight: 500;
       display: inline-block;
@@ -8611,7 +8611,7 @@ textarea.form-control {
         color: #fff;
         width: 30px;
         height: 30px;
-        background: #2770ab;
+        background: #96C9F4;
         -webkit-border-radius: 50%;
         -moz-border-radius: 50%;
         -ms-border-radius: 50%;
@@ -8626,7 +8626,7 @@ textarea.form-control {
     .staff:hover .img, .staff:focus .img {
       margin-top: -10px; }
     .staff:hover .text h3, .staff:focus .text h3 {
-      color: #2770ab; }
+      color: #96C9F4; }
 
 .ftco-social {
   padding: 0; }
@@ -8737,7 +8737,7 @@ textarea.form-control {
   font-size: 18px; }
 
 .bootstrap-select .bs-ok-default:after {
-  color: #2770ab;
+  color: #96C9F4;
   font-size: 12px;
   margin-top: 5px; }
 
@@ -8794,7 +8794,7 @@ textarea.form-control {
   .ftco-footer a {
     color: #fff; }
     .ftco-footer a:hover {
-      color: #2770ab; }
+      color: #96C9F4; }
   .ftco-footer .ftco-heading-2 {
     font-size: 17px;
     font-weight: 400;
@@ -8809,7 +8809,7 @@ textarea.form-control {
     width: 50px;
     display: block;
     float: left;
-    background: #2770ab;
+    background: #96C9F4;
     border-radius: 50%;
     position: relative; }
     .ftco-footer-social li a span {
@@ -8828,12 +8828,12 @@ textarea.form-control {
   .footer-small-nav > li a {
     margin: 0 10px 10px 0; }
     .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
-      color: #2770ab; }
+      color: #96C9F4; }
 
 .media .ftco-icon {
   width: 100px; }
   .media .ftco-icon span {
-    color: #2770ab; }
+    color: #96C9F4; }
 
 .ftco-media {
   background: #fff;
@@ -8857,7 +8857,7 @@ textarea.form-control {
   .ftco-media .icon {
     font-size: 50px;
     display: block;
-    color: #2770ab; }
+    color: #96C9F4; }
   .ftco-media.text-center .ftco-icon {
     margin: 0 auto; }
 
@@ -8934,7 +8934,7 @@ textarea.form-control {
     right: 0;
     content: '';
     height: 400px;
-    background: #2770ab;
+    background: #96C9F4;
     opacity: .8; }
   .testimony-section .owl-carousel {
     margin: 0; }
@@ -8996,7 +8996,7 @@ textarea.form-control {
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.1); }
       .testimony-section .owl-dots .owl-dot.active {
-        background: #2770ab; }
+        background: #96C9F4; }
 
 .testimony-wrap {
   display: block;
@@ -9014,7 +9014,7 @@ textarea.form-control {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #2770ab; }
+    background: #96C9F4; }
     .testimony-wrap .icon span {
       color: #fff; }
   .testimony-wrap .user-img {
@@ -9088,7 +9088,7 @@ textarea.form-control {
     bottom: 0;
     content: '';
     opacity: 0;
-    background: #2770ab;
+    background: #96C9F4;
     z-index: -1; }
     @media (min-width: 992px) {
       .ftco-counter .overlay {
@@ -9150,7 +9150,7 @@ textarea.form-control {
       .blog-entry .text .heading a {
         color: #000000; }
         .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-          color: #2770ab; }
+          color: #96C9F4; }
   .blog-entry .meta {
     width: 100px;
     height: 100px;
@@ -9169,7 +9169,7 @@ textarea.form-control {
       line-height: 1.2; }
       .blog-entry .meta span.day {
         font-weight: 700;
-        color: #2770ab;
+        color: #96C9F4;
         font-size: 30px;
         font-family: "Lora", serif; }
       .blog-entry .meta span.mos {
@@ -9188,7 +9188,7 @@ textarea.form-control {
     font-weight: 600;
     letter-spacing: 2px; }
   .blog-entry:hover .meta {
-    background: #2770ab; }
+    background: #96C9F4; }
     .blog-entry:hover .meta .day {
       color: #fff; }
 
@@ -9222,7 +9222,7 @@ textarea.form-control {
     margin-bottom: 4px;
     font-weight: 400; }
     .block-27 ul li a, .block-27 ul li span {
-      color: #2770ab;
+      color: #96C9F4;
       text-align: center;
       display: inline-block;
       width: 40px;
@@ -9231,7 +9231,7 @@ textarea.form-control {
       border-radius: 50%;
       border: 1px solid #e6e6e6; }
     .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #2770ab;
+      background: #96C9F4;
       color: #fff;
       border: 1px solid transparent; }
 
@@ -9258,12 +9258,12 @@ textarea.form-control {
       font-weight: 500;
       color: #000000; }
     .dbox p a {
-      color: #2770ab; }
+      color: #96C9F4; }
   .dbox .icon {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: #2770ab;
+    background: #96C9F4;
     margin: 0 auto;
     margin-bottom: 20px; }
     .dbox .icon span {
@@ -9273,7 +9273,7 @@ textarea.form-control {
     width: 100%; }
 
 .contactForm .label {
-  color: #2770ab !important;
+  color: #96C9F4 !important;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 600; }
@@ -9305,7 +9305,7 @@ textarea.form-control {
     /* Firefox 18- */
     color: rgba(0, 0, 0, 0.5) !important; }
   .contactForm .form-control:focus, .contactForm .form-control:active {
-    border-color: #2770ab !important; }
+    border-color: #96C9F4 !important; }
 
 .contactForm textarea.form-control {
   height: inherit !important; }
@@ -9331,7 +9331,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color: #000000; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #2770ab; }
+        color: #96C9F4; }
   .block-21 .text .meta > div {
     display: inline-block;
     font-size: 14px;
@@ -9421,7 +9421,7 @@ textarea.form-control {
         font-size: 20px; }
       .comment-list li .comment-body .meta {
         font-size: 15px;
-        color: #2770ab; }
+        color: #96C9F4; }
       .comment-list li .comment-body .reply {
         padding: 5px 10px;
         background: #e6e6e6;
@@ -9491,11 +9491,11 @@ textarea.form-control {
       font-size: 14px; }
     .categories li a:hover, .categories li a:focus, .sidelink li a:hover, .sidelink li a:focus {
       outline: none;
-      color: #2770ab; }
+      color: #96C9F4; }
   .categories li.active a, .sidelink li.active a {
-    color: #2770ab; }
+    color: #96C9F4; }
     .categories li.active a span, .sidelink li.active a span {
-      color: #2770ab; }
+      color: #96C9F4; }
 
 .top {
   padding: 0; }
