--- a/views/components/about.ejs
+++ b/views/components/about.ejs
@@ -6,7 +6,9 @@
             </div>
             <div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5">
                 <div class="heading-section">
-                    <span class="subheading" style="color: #c12924;">Bienvenue à la maison d'édition</span>
+                    <span class="subheading" style="color: #c12924; font-size: 70px;">
+                        AKWABA
+                    </span>
                     <h2 class="mb-4" style="color: #2770ab;">Société d'édition créée par des auteurs</h2>
 
                     <p>
@@ -39,7 +41,7 @@
         </div>
         <br>
     </div>
-    
+
     <div class="container" style="border-top:1px solid #000;height: auto">
         <div class="row">
             <div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5"
