--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -10,6 +10,6 @@
 
 <%- include('../components/testimony') %>
 
-<%# include('../components/soon') %>
+<%- include('../components/soon') %>
 
 <%- include('../components/newsletter') %>
