--- a/views/components/about.ejs
+++ b/views/components/about.ejs
@@ -47,7 +47,7 @@
             <div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5"
                 style="border-right:1px solid #000;height:500px">
                 <div class="heading-section">
-                    <h2 class="mb-4" style="color: #2770ab;">
+                    <h2 class="mb-1" style="color: #2770ab;">
                         Notre histoire
                     </h2>
 
@@ -68,7 +68,7 @@
             </div>
             <div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5">
                 <div class="heading-section">
-                    <h2 class="mb-4" style="color: #2770ab;">
+                    <h2 class="mb-1" style="color: #2770ab;">
                         Notre mission
                     </h2>
 
@@ -93,5 +93,6 @@
         font-weight: bold;
         font-size: 1.2em;
         color: #c12924;
+        float: right;
     }
 </style>
