--- a/views/genre/list.ejs
+++ b/views/genre/list.ejs
@@ -12,7 +12,7 @@
                         </a>
                     </span> 
                     <span>
-                        Genre <i class="fa fa-chevron-right"></i>
+                        Genres <i class="fa fa-chevron-right"></i>
                     </span>
                 </p>
                 <h1 class="mb-0 bread">Genres</h1>
