--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -8,8 +8,8 @@
 
 <%# include('../components/release') %>
 
-<%- include('../components/testimony') %>
+<% include('../components/testimony') %>
 
-<%- include('../components/soon') %>
+<%# include('../components/soon') %>
 
 <%- include('../components/newsletter') %>
