--- a/views/book/list.ejs
+++ b/views/book/list.ejs
@@ -1,6 +1,6 @@
 <% extend('../base') %>
 
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('/images/bg_5.jpg');"
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('/images/bg_8.jpg');"
         data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -8,12 +8,12 @@
                 <div class="col-md-9 ftco-animate mb-0 text-center">
                     <p class="breadcrumbs mb-0">
                         <span class="mr-2">
-                            <a href="/">Accueil 
-                                <i class="fa fa-chevron-right"></i>
+                            <a href="/"  style="color: white;">Accueil 
+                                <i class="fa fa-chevron-right"  style="color: white;"></i>
                             </a>
                         </span> 
-                        <span>Livres <i class="fa fa-chevron-right"></i></span></p>
-                    <h1 class="mb-0 bread">Livres</h1>
+                        <span style="color: white;">Livres <i class="fa fa-chevron-right" style="color: white;"></i></span></p>
+                    <h1 class="mb-0 bread"  style="color: white;">Livres</h1>
                 </div>
             </div>
         </div>
@@ -26,7 +26,7 @@
                     <div class="col-md-6 col-lg-4 d-flex">
                         <div class="book-wrap d-lg-flex">
                             <div class="img d-flex justify-content-end"
-                                style="background-image: url(<%= b.coverUrl || '/images/book-1.jpg' %>);">
+                                style="background-image:  url(<%= b.coverUrl || '/images/book-1.jpg' %>); background-size: cover; background-position: center; background-repeat: no-repeat">
                             </div>
                             <div class="text p-4">
                                 <h2>
