--- a/views/components/newsletter.ejs
+++ b/views/components/newsletter.ejs
@@ -25,7 +25,7 @@
                                         <label class="label" for="name">Nom complet</label>
                                         <input type="text" class="form-control" name="name" id="name"
                                         value="<% if (locals.rbody) { %><%= rbody.name %><% } %>"
-                                            placeholder="Prenom NOM" required>
+                                            placeholder="Prénom NOM" required>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
