--- a/views/author/list.ejs
+++ b/views/author/list.ejs
@@ -6,18 +6,6 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate mb-0 text-center">
-                    <p class="breadcrumbs mb-0">
-                        <span class="mr-2">
-                            <a href="/">
-                                Accueil 
-                                <i class="fa fa-chevron-right"></i>
-                            </a>
-                        </span> 
-                        <span>
-                            Auteurs 
-                            <i class="fa fa-chevron-right"></i>
-                        </span>
-                    </p>
                     <h1 class="mb-0 bread">Auteurs</h1>
                 </div>
             </div>
@@ -31,8 +19,7 @@
                     <div class="col-md-6 col-lg-3 ftco-animate">
                         <div class="staff">
                             <div class="img-wrap d-flex align-items-stretch">
-                                <div class="img align-self-stretch"
-                                    style="background-image: url(<%= a.photoUrl %>);">
+                                <div class="img align-self-stretch" style="background-image: url(<%= a.photoUrl %>);">
                                 </div>
                             </div>
                             <div class="text pt-3 px-3 pb-4 text-center">
@@ -46,7 +33,7 @@
                             </div>
                         </div>
                     </div>
-                <% } %>
+                    <% } %>
             </div>
         </div>
     </section>
