--- a/views/components/about.ejs
+++ b/views/components/about.ejs
@@ -12,26 +12,19 @@
                     <h2 class="mb-4" style="color: #2770ab;">Société d'édition créée par des auteurs</h2>
 
                     <p>
-                        Bienvenue aux Éditions Calebasse, où chaque livre est une aventure, chaque auteur une voix
-                        unique, et chaque lecteur un explorateur des mondes que nous créons ensemble. Notre maison
-                        d'édition est née d'une passion partagée pour les mots et les histoires qui façonnent notre
-                        compréhension du monde et de nous-mêmes.
+                        Les Éditions Calebasse ont été fondées le 6 mai 2021 par un groupe deux passionnés de littérature déterminés à découvrir et surtout à promouvoir les talents littéraires africains nouveaux ou confirmés.
                     </p>
+
                     <p>
-                        Nous croyons fermement que la littérature a le pouvoir de transcender les frontières et de
-                        connecter les cœurs et les esprits. C'est pourquoi nous nous consacrons à la publication
-                        d'œuvres qui reflètent la diversité et la richesse de l'expérience humaine.
+                        Située à Abidjan, notre maison d'édition s'est rapidement imposée comme une référence dans le domaine de l'édition indépendante.
                     </p>
+
                     <p>
-                        Que vous soyez un lecteur avide à la recherche de votre prochaine grande lecture ou un écrivain
-                        avec une histoire à raconter, nous sommes ravis de vous accueillir dans notre communauté.
-                        Ensemble, nous pouvons explorer les possibilités infinies de la littérature et célébrer la magie
-                        des mots.
+                        Notre parcours a été marqué par des collaborations fructueuses avec des auteurs émergents et confirmés, tous unis par leur désir de raconter des histoires uniques et captivantes.
                     </p>
+
                     <p>
-                        Merci de nous rejoindre dans cette aventure littéraire. Ensemble, nous allons écrire les
-                        chapitres d'un futur rempli d'histoires extraordinaires.
-                        Avec passion et gratitude,
+                        Nous sommes fiers de notre engagement envers la diversité et l'inclusion, et nous nous efforçons de créer un espace où chaque voix a la possibilité de s'exprimer et d'être entendue.
                     </p>
 
                     <p class="signature">Les Éditions Calebasse</p>
@@ -52,7 +45,7 @@
                     </h2>
 
                     <p>
-                        Les Éditions Calebasse ont été fondées le 6 mai 2021 par un groupe deux passionnés de littérature déterminés à découvrir et surtout à promouvoir talents littéraires africains nouveaux ou confirmés. 
+                        Les Éditions Calebasse ont été fondées le 6 mai 2021 par deux passionnés de littérature déterminés à découvrir et surtout à promouvoir talents littéraires africains nouveaux ou confirmés. 
                     </p>
                     <p>
                         Située à Abidjan, notre maison d'édition s'est rapidement imposée comme une référence dans le domaine de l'édition indépendante.
