--- a/views/components/about.ejs
+++ b/views/components/about.ejs
@@ -12,22 +12,38 @@
                     <h2 class="mb-4" style="color: #2770ab;">Société d'édition créée par des auteurs</h2>
 
                     <p>
-                        Les Éditions Calebasse ont été fondées le 6 mai 2021 par un groupe deux passionnés de littérature déterminés à découvrir et surtout à promouvoir les talents littéraires africains nouveaux ou confirmés.
+                        Chers amis de la littérature,
                     </p>
 
                     <p>
-                        Située à Abidjan, notre maison d'édition s'est rapidement imposée comme une référence dans le domaine de l'édition indépendante.
+                        Bienvenue aux Éditions Calebasse, où chaque livre est une aventure, chaque auteur une voix
+                        unique, et chaque lecteur un explorateur des mondes que nous créons ensemble. Notre maison
+                        d'édition est née d'une passion partagée pour les mots et les histoires qui façonnent notre
+                        compréhension du monde et de nous-mêmes.
                     </p>
 
                     <p>
-                        Notre parcours a été marqué par des collaborations fructueuses avec des auteurs émergents et confirmés, tous unis par leur désir de raconter des histoires uniques et captivantes.
+                        Nous croyons fermement que la littérature a le pouvoir de transcender les frontières et de
+                        connecter les cœurs et les esprits. C'est pourquoi nous nous consacrons à la publication
+                        d'œuvres qui reflètent la diversité et la richesse de l'expérience humaine. Que vous soyez un
+                        lecteur avide à la recherche de votre prochaine grande lecture ou
+                        un écrivain avec une histoire à raconter, nous sommes ravis de vous accueillir dans notre
+                        communauté.
                     </p>
 
                     <p>
-                        Nous sommes fiers de notre engagement envers la diversité et l'inclusion, et nous nous efforçons de créer un espace où chaque voix a la possibilité de s'exprimer et d'être entendue.
+                        Merci de nous rejoindre dans cette aventure littéraire. Ensemble, nous allons écrire les
+                        chapitres d'un futur rempli d'histoires extraordinaires.
+                        Avec passion et gratitude,
                     </p>
 
-                    <p class="signature">Les Éditions Calebasse</p>
+                    <!-- <p class="signature">Les Éditions Calebasse</p> -->
+                    <div class="row">
+                        <div class="col-md-6"></div>
+                        <div class="col-md-6">
+                            <img src="/images/sign1.png" alt="">
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -37,42 +53,50 @@
 
     <div class="container" style="border-top:1px solid #000;height: auto">
         <div class="row">
-            <div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5"
-                style="border-right:1px solid #000;height:500px">
+            <div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5">
                 <div class="heading-section">
                     <h2 class="mb-1" style="color: #2770ab;">
                         Notre histoire
                     </h2>
 
                     <p>
-                        Les Éditions Calebasse ont été fondées le 6 mai 2021 par deux passionnés de littérature déterminés à découvrir et surtout à promouvoir talents littéraires africains nouveaux ou confirmés. 
+                        Les Éditions Calebasse ont été fondées le 6 mai 2021 par deux passionnés de littérature
+                        déterminés à découvrir et surtout à promouvoir les talents littéraires africains nouveaux ou
+                        confirmés.
                     </p>
-                    <p>
-                        Située à Abidjan, notre maison d'édition s'est rapidement imposée comme une référence dans le domaine de l'édition indépendante.
-                    </p>
-                    <p>
-                        Notre parcours a été marqué par des collaborations fructueuses avec des auteurs émergents et confirmés, tous unis par leur désir de raconter des histoires uniques et captivantes.
-                    </p>
-                    <p>
-                        Nous sommes fiers de notre engagement envers la diversité et l'inclusion, et nous nous efforçons de créer un espace où chaque voix a la possibilité de s'exprimer et d'être entendue.
-                    </p>
-                </div>
 
+                    <p>
+                        Située à Abidjan, notre maison d'édition s'est rapidement imposée comme une référence dans le
+                        domaine de l'édition indépendante.
+                    </p>
+
+                    <p>
+                        Notre parcours a été marqué par des collaborations fructueuses avec des auteurs émergents et
+                        confirmés, tous unis par leur désir de raconter des histoires uniques et captivantes.
+                    </p>
+
+                </div>
             </div>
-            <div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5">
+            <div class="col-md-6 wrap-about pl-md-5 ftco-animate py-5" style="border-left:1px solid #000;height:auto">
                 <div class="heading-section">
                     <h2 class="mb-1" style="color: #2770ab;">
                         Notre mission
                     </h2>
 
                     <p>
-                        Notre mission est de fournir une plateforme aux voix littéraires innovantes et audacieuses. Nous nous engageons à publier des œuvres qui résonnent avec les lecteurs, tout en offrant un soutien complet à nos auteurs à chaque étape du processus d'édition.
+                        Notre mission est de fournir une plateforme aux voix littéraires innovantes et audacieuses. Nous
+                        nous engageons à publier des œuvres qui résonnent avec les lecteurs, tout en offrant un soutien
+                        complet à nos auteurs à chaque étape du processus d'édition.
                     </p>
                     <p>
-                        Nous croyons en la puissance des mots pour transformer les perspectives et enrichir les vies. C'est pourquoi nous nous efforçons de créer un espace où la diversité est célébrée et où chaque voix a la possibilité de s'exprimer.
+                        Nous croyons en la puissance des mots pour transformer les perspectives et enrichir les vies.
+                        C'est pourquoi nous nous efforçons de créer un espace où la diversité est célébrée et où chaque
+                        voix a la possibilité de s'exprimer.
                     </p>
                     <p>
-                        En tant que maison d'édition indépendante, nous sommes fiers de notre capacité à offrir un accompagnement personnalisé à nos auteurs, en veillant à ce que leurs visions créatives soient respectées et mises en valeur.
+                        En tant que maison d'édition indépendante, nous sommes fiers de notre capacité à offrir un
+                        accompagnement personnalisé à nos auteurs, en veillant à ce que leurs visions créatives soient
+                        respectées et mises en valeur.
                     </p>
                 </div>
 
