--- a/views/book/view.ejs
+++ b/views/book/view.ejs
@@ -52,6 +52,12 @@
                             </span>
                         </li>
                         <li>
+                            Pages : 
+                            <span>
+                                <%= book.pages %>
+                            </span>
+                        </li>
+                        <li>
                             Code : 
                             <span>
                                 <%= book.code %>
