--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,8 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  /* color: #212529; */
+  color: #1d1e1f;
   text-align: left;
   background-color: #fff;
 }
